product editor - bug fix and enhancements
The 'save all' button did not previously save changes to variations.
The save button now uses the same event delegation used on the rest of
the product editor save buttons (though currently doesn't support
numChanges feature).
put scrollable div around store variations. In the case of a long list,
the save button was not visible.

--- a/extensions/admin/product_editor.css
+++ b/extensions/admin/product_editor.css
@@ -103,6 +103,7 @@ General tab
 Variations
 */
 
+div.storeVariationsListContainer	{max-height:250px; overflow:auto;}
 
 td.variationEditorSplitter	{border:1px solid #efefef; vertical-align:middle; padding:0; width:2px;}
 td.variationEditorSplitter div	{width:2px; overflow:visible; position:relative;}
